--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,19 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "chai": "^5.1.1",
+    "chai-http": "^5.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mocha": "^10.4.0",
     "mongoose": "^8.4.3",
-    "stripe": "^15.12.0"
+    "stripe": "^15.12.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.3"
