--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mocha": "^10.4.0",
+    "mongodb": "^6.8.0",
     "mongoose": "^8.4.3",
     "stripe": "^15.12.0",
     "swagger-jsdoc": "^6.2.8",
