--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "chai": "^5.1.1",
     "chai-http": "^5.0.0",
     "cors": "^2.8.5",
